syntax = "proto3";

// buf:lint:ignore PACKAGE_VERSION_SUFFIX
package injective.crypto.v1beta1.ethsecp256k1;

import "gogoproto/gogo.proto";

// Originally
// github.com/InjectiveLabs/injective-core/injective-chain/crypto/ethsecp256k1
option go_package = "github.com/cosmos/relayer/v2/relayer/codecs/injective";

// PubKey defines a type alias for an ecdsa.PublicKey that implements
// Comet's PubKey interface. It represents the 33-byte compressed public
// key format.
message PubKey {
  option (gogoproto.goproto_stringer) = false;

  bytes key = 1;
}

// PrivKey defines a type alias for an ecdsa.PrivateKey that implements
// Comet's PrivateKey interface.
message PrivKey { bytes key = 1; }
